src/objects/Survey_Result__c.object
<CustomObject>
    <description>Store all the anwers of the booking survey</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Detractor</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Promoter</fullName>
                <color>#33CC00</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evaluation_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluation Booking</label>
        <referenceTo>Evaluation_Booking__c</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPS_Score_del__c</fullName>
        <description>Used for Summarise score for all results =&gt; Dashboard purpose</description>
        <label>NPS Score</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_count__c</fullName>
        <formula>IF( ISPICKVAL(Customer_Type__c, &quot;Detractor&quot;) , -1, IF(ISPICKVAL(Customer_Type__c, &quot;Neutral&quot;),0,1 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_1_Comments__c</fullName>
        <label>Question 1 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <description>How would you rate this vehicle compared to your current like for like fleet/drive vehicle?</description>
        <inlineHelpText>How would you rate this vehicle compared to your current like for like fleet/drive vehicle?</inlineHelpText>
        <label>Vehicle rate compared to current vehicle</label>
        <picklist>
            <picklistValues>
                <fullName>Better than current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same as current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worse than current</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question_2_1__c</fullName>
        <description>Please rate the vehicle from 0-10 in the following key areas</description>
        <inlineHelpText>(engine options and fuel economy)</inlineHelpText>
        <label>Performance rate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_2_2__c</fullName>
        <description>Please rate the vehicle from 0-10 in the following key areas 
 (Please rate the the vehicle from 0-10, with 0 being &quot;poor&quot;, 5 being &quot;average&quot; 
 and 10 being &quot;excellent&quot;)</description>
        <inlineHelpText>safety technology</inlineHelpText>
        <label>Safety rate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_2_3__c</fullName>
        <description>Please rate the vehicle from 0-10 in the following key areas 
 (Please rate the the vehicle from 0-10, with 0 being &quot;poor&quot;, 5 being &quot;average&quot; 
 and 10 being &quot;excellent&quot;)</description>
        <inlineHelpText>(seat position/adjustability, visibility, road handling)</inlineHelpText>
        <label>Comfort and Handling rate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_3_Comments__c</fullName>
        <label>Question 3 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_4_Comments__c</fullName>
        <label>Question 4 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_5__c</fullName>
        <description>What Nissan vehicle would you like to drive next?</description>
        <inlineHelpText>What Nissan vehicle would you like to drive next?</inlineHelpText>
        <label>Vehicle would you like to drive next?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_6__c</fullName>
        <inlineHelpText>Based on your experience with Nissan Fleet, how likely are you to 
 recommend Nissan to a friend or colleague?</inlineHelpText>
        <label>Recommend Nissan?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Survey Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>